<resources>
    <string name="app_name">Locale</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_hotels">Hotels</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_rests">Rests</string>
    <string name="title_activity_attractions">Attractions</string>
    <string name="title_activity_shopping">Shopping</string>
    <string name="title_activity_share">Share</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="Name">Name</string>
    <string name="Login">LOGIN</string>
    <string name="Signup">Signup</string>
    <string name="title_activity_register">register</string>
    <string name="Register">Register</string>
    <string name="regHere">Register here</string>


    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="dummy">Custom fonts in XML are easy</string>
    <string name="loc">localé</string>
    <string name="title_activity_infotwo">Infotwo</string>
    <string name="info1">Find...Capture...Post</string>
    <string name="info2">Locale helps you to find places that you never knew existed. Just...</string>
    <string name="ok">OK</string>
    <string name="take">Take the journey</string>
    <string name="find">Find the next cool restaurant, attraction or hotels near you. So...</string>
    <string name="come">Come and take a look inside!!!</string>
    <string name="next">Find the next cool spot</string>
    <string name="title_activity_add_locale">AddLocale</string>
    <string name="check">OR CHECK OUT THE LOCALEs </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="n">NEAR</string>
    <string name="btncheck">CHECK OUT LOCALE</string>
    <string name="br">Brief description</string>
    <string name="cats">HOTEL,RESTAURANT,SHOPPING,ATTRACTION</string>
    <string name="str">Street Name</string>
    <string name="ploc">Prominent Location</string>
    <string name="can">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="takepho">TAKEPHOTO</string>
    <string name="title">localé</string>
    <string name="title_activity_intro">Intro</string>
</resources>
