<!--<ScrollView-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_width="fill_parent"-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android">-->

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="locale.example.ngondo.AddLocaleFragment">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/takepho"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/btncancel"
            android:layout_alignStart="@+id/btncancel"
            android:layout_alignRight="@+id/btnsave"
            android:layout_alignEnd="@+id/btnsave"
            android:id="@+id/btntakephoto" />

        <!--<ImageView-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="150dp"-->
            <!--android:src="@drawable/cam"-->
            <!--android:id="@+id/imageButton"-->
            <!--android:layout_below="@+id/btntakephoto"-->
            <!--android:layout_centerHorizontal="true" />-->
    <com.parse.ParseImageView
        android:id="@+id/localepreview"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@+id/btntakephoto"
        android:layout_centerHorizontal="true"
        />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Name of the place "
            android:ems="10"
            android:id="@+id/editText"
            android:layout_below="@+id/localepreview"
            android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/br"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/str"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/cats"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_below="@+id/editText3"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n"
        android:id="@+id/textView2"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/ploc"
        android:ems="10"
        android:id="@+id/editText5"
        android:layout_below="@+id/editText4"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/can"
        android:id="@+id/btncancel"
        android:layout_alignTop="@+id/btnsave"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnsave"
        android:layout_below="@+id/editText5"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />


</RelativeLayout>
<!--</ScrollView>-->